# rest_api

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  rest_api.cpp  vcpkg.json
.github/workflows/: build.yml
integration_tests/: test_api.py
src/: common_ops.cpp  common_ops.hpp  common_types.hpp  get_mean.hpp  get_mean_path.hpp  listener.cpp  listener.hpp  query.cpp  query.hpp  request_handler.hpp  resp_factory.cpp  resp_factory.hpp  rest_api.cpp  save_event.hpp  server.cpp  server.hpp  session.cpp  session.hpp  store.cpp  store.hpp
unit_tests/: test_save_event.cpp
